--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="true" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@
         </activity>
 
         <service
-            android:name=".service.SensorData"
+            android:name=".service.SensorRecordService"
             android:enabled="true"
             android:exported="false"/>
     </application>
