--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="true" />
 
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +36,8 @@
         <service
             android:name=".service.SensorRecordService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
+
     </application>
 
 </manifest>
