--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -41,4 +41,6 @@ dependencies {
 
     // Test helpers
     testImplementation "android.arch.persistence.room:testing:$room_version"
+
+    implementation 'com.ticwear:ticdesign:1.1.0'
 }
