--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
             android:enabled="true"
             android:exported="false" />
 
+        <activity
+            android:name=".ui.ListActivity"
+            android:label="@string/title_activity_list">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
