Added confirmation activity to show message.

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -41,12 +41,12 @@
         <activity
             android:name=".ui.ListActivity"
             android:label="@string/title_activity_list">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
+        <activity
+            android:name="android.support.wearable.activity.ConfirmationActivity">
+        </activity>
+        
     </application>
 
 </manifest>
