--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:wear:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compileOnly 'com.google.android.wearable:wearable:2.4.0'
 
     def room_version = "1.1.1"
