--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -24,13 +24,18 @@
             android:value="true" />
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.SplashScreenActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name">
         </activity>
 
         <service
@@ -40,13 +45,8 @@
 
         <activity
             android:name=".ui.ListActivity"
-            android:label="@string/title_activity_list">
-        </activity>
-
-        <activity
-            android:name="android.support.wearable.activity.ConfirmationActivity">
-        </activity>
-        
+            android:label="@string/title_activity_list"></activity>
+        <activity android:name="android.support.wearable.activity.ConfirmationActivity"/>
     </application>
 
 </manifest>
