--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.opencsv:opencsv:4.5'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
