--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.adnagu.activityrecognition">
 
     <uses-feature android:name="android.hardware.type.watch" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ticwear">
+        android:theme="@style/Theme.Ticwear"
+        tools:ignore="GoogleAppIndexingWarning">
         <uses-library
             android:name="com.google.android.wearable"
             android:required="true" />
@@ -44,7 +47,7 @@
 
         <activity
             android:name=".ui.ListActivity"
-            android:label="@string/title_activity_list"></activity>
+            android:label="@string/title_activity_list" />
         <activity android:name="android.support.wearable.activity.ConfirmationActivity"/>
     </application>
 
