--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".ui.PredictionsActivity" />
+
         <service
             android:name=".service.SensorRecordService"
             android:enabled="true"
