--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         </activity>
 
         <activity android:name=".ui.PredictionsActivity" />
+        <activity android:name=".ui.CircularPredictionsActivity" />
 
         <service
             android:name=".service.SensorRecordService"
